--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ add_executable(lsp ${SOURCES})
 
 find_package(teem)
 
+find_package(libxml2)
+include_directories(${LIBXML2_INCLUDE_DIR})
+
 #Adding Boost program_options
 set(Boost_INCLUDE_DIR /usr/local/boost_1_65_1)
 set(Boost_LIBRARY_DIR /usr/local/boost_1_65_1/stage/lib)
@@ -19,4 +22,4 @@ find_package(Boost COMPONENTS program_options REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIR})
 
-target_link_libraries(lsp ${Boost_LIBRARIES} teem)
+target_link_libraries(lsp ${Boost_LIBRARIES} teem ${LIBXML2_LIBRARIES})
