Updated LibXml2 dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(lsp ${SOURCES})
 
 find_package(teem)
 
-find_package(libXml2)
+find_package(LibXml2)
 include_directories(${LIBXML2_INCLUDE_DIR})
 
 target_link_libraries(lsp teem ${LIBXML2_LIBRARIES})
